# mochi-yokan

./: .codecov.yml  .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  spack.yaml
.github/workflows/: codecov.yml  codeql.yml  test.yml
benchmark/: CMakeLists.txt  benchmark.cpp  run.sh
cmake/: FindUnQLite.cmake
docs/examples/yokan/01_init/: CMakeLists.txt
docs/examples/yokan/03_basic/: CMakeLists.txt
docs/examples/yokan/04_multi/: CMakeLists.txt
docs/examples/yokan/05_coll/: CMakeLists.txt
docs/examples/yokan/06_doc/: CMakeLists.txt
docs/examples/yokan/07_doc_multi/: CMakeLists.txt
docs/examples/yokan/08_filters/: CMakeLists.txt
docs/examples/yokan/10_migration/: CMakeLists.txt
docs/examples/yokan/11_watcher/: CMakeLists.txt
docs/examples/yokan/12_python/: error_handling.py  higher_level_api.py  modes_example.py
docs/examples/yokan/13_cpp/: CMakeLists.txt
docs/examples/yokan/14_snapshot/: CMakeLists.txt  snapshot_example.c
docs/source/: yokan.rst
docs/source/yokan/: 01_init.rst  03_basics.rst  04_multi.rst  06_docs.rst  09_filters.rst  10_migration.rst  11_watcher.rst  12_python.rst  13_cpp.rst  14_snapshot.rst
examples/: CMakeLists.txt  admin.c  client.c  server.c
include/rkv/: rkv-admin.h  rkv-allocator.h  rkv-backend.hpp  rkv-bulk-cache.h  rkv-client.h  rkv-common.h  rkv-database.h  rkv-provider-handle.h  rkv-server.h  rkv-watcher.hpp
include/rkv/cxx/: rkv-admin.hpp  rkv-backend.hpp  rkv-client.hpp  rkv-database.hpp  rkv-exception.hpp  rkv-server.hpp
include/yokan/: admin.h  allocator.h  backend.hpp  bulk-cache.h  client.h  collection.h  common.h  database.h  doc-mixin.hpp  filters.hpp  migration.hpp  provider-handle.h  server.h  usermem.hpp  watcher.hpp
include/yokan/cxx/: admin.hpp  backend.hpp  client.hpp  collection.hpp  common.hpp  database.hpp  exception.hpp  extras.hpp  server.hpp
include/yokan/util/: locks.hpp
python/: CMakeLists.txt  py-rkv-admin.cpp  py-rkv-client.cpp  py-rkv-common.cpp  py-rkv-server.cpp  py-yokan-admin.cpp  py-yokan-client.cpp  py-yokan-common.cpp  py-yokan-server.cpp
python/mochi/: _yokan_backends.py.in
python/mochi/yokan/: backends.py  client.py  config_space.py  exception.py  mode.py  server.py  spec.py  test_config_space.py
src/: CMakeLists.txt  admin.c  admin.h  backends.cpp  bedrock-module.c  client.c  client.h  config.h.in  provider.cpp  provider.hpp  rkv-admin.pc.in  rkv-client.pc.in  rkv-config.cmake.in  rkv-server.pc.in  types.h  yokan-admin.pc.in  yokan-client.pc.in  yokan-config.cmake.in  yokan-server.pc.in
src/admin/: admin.c  admin.h
src/backends/: array.cpp  backends.cpp  berkeleydb.cpp  doc-mixin.cpp  gdbm.cpp  leveldb.cpp  lmdb.cpp  log.cpp  map.cpp  null.cpp  rocksdb.cpp  set.cpp  tkrzw.cpp  unordered_map.cpp  unordered_set.cpp  unqlite.cpp
src/backends/util/: key-copy.hpp
src/bedrock/: bedrock-module.c  bedrock-module.cpp
src/buffer/: default_bulk_cache.cpp  default_bulk_cache.hpp  dummy_bulk_cache.cpp  dummy_bulk_cache.hpp  keep_all_bulk_cache.cpp  keep_all_bulk_cache.hpp  lru_bulk_cache.cpp  lru_bulk_cache.hpp
src/client/: client.c  client.cpp  client.h  client.hpp  coll_create.cpp  coll_drop.cpp  coll_erase.cpp  coll_exists.cpp  coll_last_id.cpp  coll_load.cpp  coll_size.cpp  coll_store.cpp  coll_update.cpp  count.cpp  doc_erase.cpp  doc_fetch.cpp  doc_iter.cpp  doc_length.cpp  doc_list.cpp  doc_load.cpp  doc_size.cpp  doc_store.cpp  doc_update.cpp  erase.cpp  erase_range.cpp  exists.cpp  fetch.cpp  find_by_name.cpp  get.cpp  iter.cpp  length.cpp  list_keys.cpp  list_keyvals.cpp  put.cpp
src/cmake-tests/: has_experimental_filesystem.cpp  has_experimental_string_view.cpp  has_filesystem.cpp  has_string_view.cpp
src/common/: allocator.hpp  bulk_timeout.h  checks.h  contiguous.hpp  defer.hpp  extras.h  linker.hpp  locks.hpp  logging.h  modes.hpp  types.h
src/server/: coll_create.cpp  coll_drop.cpp  coll_erase.cpp  coll_exists.cpp  coll_last_id.cpp  coll_load.cpp  coll_size.cpp  coll_store.cpp  coll_update.cpp  count.cpp  doc_erase.cpp  doc_fetch.cpp  doc_iter.cpp  doc_length.cpp  doc_list.cpp  doc_load.cpp  doc_size.cpp  doc_store.cpp  doc_update.cpp  erase.cpp  erase_range.cpp  exists.cpp  fetch.cpp  get.cpp  get_remi_provider_id.cpp  iter.cpp  length.cpp  list_keys.cpp  list_keyvals.cpp  migration.hpp  provider.cpp  provider.hpp  put.cpp  snapshot.cpp
src/server/util/: filters.cpp
src/server/util/lua-cjson/: lua_cjson.c  lua_cjson.h
tests/: CMakeLists.txt  available-backends.h  run-test.sh  spack.yaml  test-admin.c  test-admin.cpp  test-client.c  test-client.cpp  test-coll-common-setup.hpp  test-coll-create.cpp  test-coll-erase.cpp  test-coll-fetch.cpp  test-coll-iter.cpp  test-coll-length.cpp  test-coll-list.cpp  test-coll-load.cpp  test-coll-size.cpp  test-coll-store.cpp  test-coll-update.cpp  test-common-setup.h  test-common-setup.hpp  test-count.cpp  test-cxx-timeout.cpp  test-erase-range.cpp  test-erase.cpp  test-exists.cpp  test-fetch.cpp  test-get.cpp  test-iter.cpp  test-length.cpp  test-list-keys.cpp  test-list-keyvals.cpp  test-migration.cpp  test-provider.cpp  test-put.c  test-put.cpp  test-snapshot.cpp
tests/extra/: custom-filters.cpp
tests/python/: test-admin.py  test-coll-erase.py  test-coll-fetch.py  test-coll-iter.py  test-coll-length.py  test-coll-log.py  test-coll-update.py  test-coll.py  test-doc-list.py  test-erase-range.py  test-erase.py  test-exists.py  test-iter.py  test-length.py  test-list-keys.py  test-list-keyvals.py  test-provider.py  test-put-get-fetch.py  test-put-get.py  test-put.py  test-store-load.py  test-timeout.py
ycsb/: CMakeLists.txt  YokanYCSB.cpp  test.json
